--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
+    "crc-32": "^1.2.2",
     "mongoose": "^6.5.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
